[tool.poetry]
name = "pecotracker"
version = "0.1.0"
description = ""
authors = ["Joseph P. <joseph.pena.q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.11.0"
pandas = "^2.2.1"
pytesseract = "^0.3.10"
pillow = "^10.2.0"
tesseract = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
